# Lab3_sem3

./: CMakeLists.txt  GUI.cpp  GUI.h  HashTable.h  HashTableDictionary.h  Histogram.h  ICriteria.h  IDictionary.h  Interval.h  README.md  Student.cpp  Student.h  Tests.cpp  Tests.h  UniformCriteria.h  data.csv  main.cpp
HashTable/: HashTable.h  HashTableDictionary.h
Sequences/: ArraySequence.h  DynamicArray.h  Sequence.h
